--- a/Proyecto - Diseño de Interfaz Web/frontend/index.html
+++ b/Proyecto - Diseño de Interfaz Web/frontend/index.html
@@ -312,7 +312,7 @@
                 <label>
                     ¡Ingresá tu e-mail y enterate de todas las novedades!
                 </label>
-                <input type="text" placeholder="cosopere@gmail.com" name="email">
+                <input type="email" placeholder="cosopere@gmail.com" name="email">
                 <input type="button" value="Ingresar" name="confirmarSuscripcion">
             </form>
         </section>
