--- a/Proyecto - Diseño de Interfaz Web/admin/index.html
+++ b/Proyecto - Diseño de Interfaz Web/admin/index.html
@@ -20,7 +20,7 @@
             <img id="logoLogin" src="../img/logo.png" title="Logotipo" alt="Logotipo de un puño sosteniendo un ticket">
         </figure>
 
-        <form id="formLogin" action="crearEvento.html">
+        <form id="formLogin" action="crearEvento.html"> Formulario 
             <label for="txtUsuario">Usuario </label>
             <input type="text" id="txtUsuario" placeholder="Nombre de usuario" name="nombreUsuario" required>
 
