--- a/Proyecto - Diseño de Interfaz Web/admin/listado.html
+++ b/Proyecto - Diseño de Interfaz Web/admin/listado.html
@@ -19,14 +19,14 @@
         <form action="index.html">
             <input type="submit" value="SALIR" name="cerrarSesion">
         </form>
-        <p>Hola, <strong>Robertooooooooo</strong></p>
+        <p>Hola, <strong>Roberto</strong></p>
     </header>
 
     <nav>
         <ul>
             <li><a href="#">DASHBOARD</a></li>
             <li><a href="crearEvento.html">CREAR EVENTO</a></li>
-            <li><a href="#" class="active">LISTADO DE EVENTOS</a></li>
+            <li><a href="#">LISTADO DE EVENTOS</a></li>
             <li><a href="#">REPORTES</a></li>
             <li><a href="#">DESTACADOS</a></li>
             <li><a href="#">AGENTES DE VENTA</a></li>
@@ -59,13 +59,13 @@
                 </tr>
 
                 <tr>
-                    <td>00000</td>
-                    <td>Evento 1</td>
-                    <td>Organizador 1</td>
-                    <td>Lugar 1</td>
-                    <td>00/00/00</td>
-                    <td>00:00 hs</td>
-                    <td>$ 000</td>
+                    <td>AA001</td>
+                    <td>Catupecu Machu Toca</td>
+                    <td>Teodoro Rosell</td>
+                    <td>Teatro de Verano</td>
+                    <td>27/11/19</td>
+                    <td>21:00 hs</td>
+                    <td>$ 799</td>
 
                     <td>
                         <ul>
@@ -77,13 +77,13 @@
                 </tr>
 
                 <tr>
-                    <td>00000</td>
-                    <td>Evento 1</td>
-                    <td>Organizador 1</td>
-                    <td>Lugar 1</td>
-                    <td>00/00/00</td>
-                    <td>00:00 hs</td>
-                    <td>$ 000</td>
+                    <td>IS002</td>
+                    <td>Foo Fighters - Gira Internacional</td>
+                    <td>David Guerrero</td>
+                    <td>Estadio Centenario</td>
+                    <td>17/01/20</td>
+                    <td>20:30 hs</td>
+                    <td>$ 1995</td>
                     <td>
                         <ul>
                             <li><img class="funcionEditar" src="../img/transpa.png" title="Editar" alt="Editar Evento"></li>  
@@ -94,13 +94,13 @@
                 </tr>
 
                 <tr>
-                    <td>00000</td>
-                    <td>Evento 1</td>
-                    <td>Organizador 1</td>
-                    <td>Lugar 1</td>
-                    <td>00/00/00</td>
-                    <td>00:00 hs</td>
-                    <td>$ 000</td>
+                    <td>AA003</td>
+                    <td>El Cuarteto de Nos - Gira Sudamericana</td>
+                    <td>Alvin Figueroa</td>
+                    <td>Antel Arena</td>
+                    <td>07/12/19</td>
+                    <td>22:00 hs</td>
+                    <td>$ 1600</td>
                     <td>
                         <ul>
                             <li><img class="funcionEditar" src="../img/transpa.png" title="Editar" alt="Editar Evento"></li>  
@@ -111,13 +111,13 @@
                 </tr>
 
                 <tr>
-                    <td>00000</td>
-                    <td>Evento 1</td>
-                    <td>Organizador 1</td>
-                    <td>Lugar 1</td>
-                    <td>00/00/00</td>
-                    <td>00:00 hs</td>
-                    <td>$ 000</td>
+                    <td>KS004</td>
+                    <td>LoL - Campeonato Sudamericano</td>
+                    <td>Ibai Llanos</td>
+                    <td>Parque tecnológico del LATU</td>
+                    <td>20/02/20</td>
+                    <td>14:30 hs</td>
+                    <td>$ 400</td>
                     <td>
                         <ul>
                             <li><img class="funcionEditar" src="../img/transpa.png" title="Editar" alt="Editar Evento"></li>  
@@ -128,13 +128,13 @@
                 </tr>
 
                 <tr>
-                    <td>00000</td>
-                    <td>Evento 1</td>
-                    <td>Organizador 1</td>
-                    <td>Lugar 1</td>
-                    <td>00/00/00</td>
-                    <td>00:00 hs</td>
-                    <td>$ 000</td>
+                    <td>FB005</td>
+                    <td>Clásico Peñarol vs Nacional</td>
+                    <td>Francisco Casal</td>
+                    <td>Estadio Campeon del Siglo</td>
+                    <td>17/11/19</td>
+                    <td>17:00 hs</td>
+                    <td>$ 800</td>
                     <td>
                         <ul>
                             <li><img class="funcionEditar" src="../img/transpa.png" title="Editar" alt="Editar Evento"></li>  
@@ -145,13 +145,13 @@
                 </tr>
 
                 <tr>
-                    <td>00000</td>
-                    <td>Evento 1</td>
-                    <td>Organizador 1</td>
-                    <td>Lugar 1</td>
-                    <td>00/00/00</td>
-                    <td>00:00 hs</td>
-                    <td>$ 000</td>
+                    <td>GX006</td>
+                    <td>Conferencia TEDxMontevideo</td>
+                    <td>Javier Bouza</td>
+                    <td>Parque tecnológico del LATU</td>
+                    <td>11/11/19</td>
+                    <td>16:00 hs</td>
+                    <td>$ 300</td>
                     <td>
                         <ul>
                             <li><img class="funcionEditar" src="../img/transpa.png" title="Editar" alt="Editar Evento"></li>  
@@ -162,13 +162,13 @@
                 </tr>
 
                 <tr>
-                    <td>00000</td>
-                    <td>Evento 1</td>
-                    <td>Organizador 1</td>
-                    <td>Lugar 1</td>
-                    <td>00/00/00</td>
-                    <td>00:00 hs</td>
-                    <td>$ 000</td>
+                    <td>CS007</td>
+                    <td>Montevideo Comics</td>
+                    <td>Leandro Cortez</td>
+                    <td>Auditorio Nacional del SODRE</td>
+                    <td>11/05/20</td>
+                    <td>12:00 hs</td>
+                    <td>$ 630</td>
                     <td>
                         <ul>
                             <li><img class="funcionEditar" src="../img/transpa.png" title="Editar" alt="Editar Evento"></li>  
@@ -179,13 +179,13 @@
                 </tr>
 
                 <tr>
-                    <td>00000</td>
-                    <td>Evento 1</td>
-                    <td>Organizador 1</td>
-                    <td>Lugar 1</td>
-                    <td>00/00/00</td>
-                    <td>00:00 hs</td>
-                    <td>$ 000</td>
+                    <td>FI008</td>
+                    <td>Amistoso Internacional - Uruguay vs Estados Unidos</td>
+                    <td>Ignacio Alonso</td>
+                    <td>Estadio Centenario</td>
+                    <td>15/12/19</td>
+                    <td>19:30 hs</td>
+                    <td>$ 600</td>
                     <td>
                         <ul>
                             <li><img class="funcionEditar" src="../img/transpa.png" title="Editar" alt="Editar Evento"></li>  
@@ -196,13 +196,13 @@
                 </tr>
 
                 <tr>
-                    <td>00000</td>
-                    <td>Evento 1</td>
-                    <td>Organizador 1</td>
-                    <td>Lugar 1</td>
-                    <td>00/00/00</td>
-                    <td>00:00 hs</td>
-                    <td>$ 000</td>
+                    <td>AA009</td>
+                    <td>Toca Fixion</td>
+                    <td>Daniel César</td>
+                    <td>Teatro Florencio Sánchez</td>
+                    <td>28/03/20</td>
+                    <td>18:00 hs</td>
+                    <td>$ 250</td>
                     <td>
                         <ul>
                             <li><img class="funcionEditar" src="../img/transpa.png" title="Editar" alt="Editar Evento"></li>  
@@ -213,13 +213,13 @@
                 </tr>
 
                 <tr>
-                    <td>00000</td>
-                    <td>Evento 1</td>
-                    <td>Organizador 1</td>
-                    <td>Lugar 1</td>
-                    <td>00/00/00</td>
-                    <td>00:00 hs</td>
-                    <td>$ 000</td>
+                    <td>BF010</td>
+                    <td>Toca Buitres</td>
+                    <td>Alvin Figueroa</td>
+                    <td>Cosquin Rock</td>
+                    <td>19/11/19</td>
+                    <td>21:00 hs</td>
+                    <td>$ 1100</td>
                     <td>
                         <ul>
                             <li><img class="funcionEditar" src="../img/transpa.png" title="Editar" alt="Editar Evento"></li>  
@@ -230,13 +230,13 @@
                 </tr>
 
                 <tr>
-                    <td>00000</td>
-                    <td>Evento 1</td>
-                    <td>Organizador 1</td>
-                    <td>Lugar 1</td>
-                    <td>00/00/00</td>
-                    <td>00:00 hs</td>
-                    <td>$ 000</td>
+                    <td>SA011</td>
+                    <td>Stand Up Nicolas de Tracy - Show Artesanal</td>
+                    <td>Fernando Aguirre</td>
+                    <td>Teatro Movie Montevideo</td>
+                    <td>08/11/19</td>
+                    <td>22:00 hs</td>
+                    <td>$ 800</td>
                     <td>
                         <ul>
                             <li><img class="funcionEditar" src="../img/transpa.png" title="Editar" alt="Editar Evento"></li>  
@@ -247,13 +247,13 @@
                 </tr>
 
                 <tr>
-                    <td>00000</td>
-                    <td>Evento 1</td>
-                    <td>Organizador 1</td>
-                    <td>Lugar 1</td>
-                    <td>00/00/00</td>
-                    <td>00:00 hs</td>
-                    <td>$ 000</td>
+                    <td>SU012</td>
+                    <td>El Gran Gustaf 25 años</td>
+                    <td>Daniel César</td>
+                    <td>Antel Arena</td>
+                    <td>19/12/19</td>
+                    <td>21:00 hs</td>
+                    <td>$ 1180</td>
                     <td>
                         <ul>
                             <li><img class="funcionEditar" src="../img/transpa.png" title="Editar" alt="Editar Evento"></li>  
@@ -262,24 +262,6 @@
                         </ul>
                     </td>
                 </tr>
-
-                <tr>
-                    <td>00000</td>
-                    <td>Evento 1</td>
-                    <td>Organizador 1</td>
-                    <td>Lugar 1</td>
-                    <td>00/00/00</td>
-                    <td>00:00 hs</td>
-                    <td>$ 000</td>
-                    <td>
-                        <ul>
-                            <li><img class="funcionEditar" src="../img/transpa.png" title="Editar" alt="Editar Evento"></li>  
-                            <li><img class="funcionDuplicar" src="../img/transpa.png" title="Duplicar" alt="Duplicar Evento"></li>
-                            <li><img class="funcionEliminar" src="../img/transpa.png" title="Eliminar" alt="Eliminar Evento"></li>
-                        </ul>
-                    </td>
-                </tr>
-
             </tbody>
         </table>
 
