--- a/Proyecto - Diseño de Interfaz Web/frontend/index.html
+++ b/Proyecto - Diseño de Interfaz Web/frontend/index.html
@@ -2,17 +2,16 @@
 <html>
 
 <head>
-    <title>SpinelsTicket-Venta de tickets online</title>
+    <title>SpinelsTicket - Venta de tickets online</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Página de venta de tickets online y noticias de todo tipo de eventos y shows">
+    <meta name="keywords" content="Venta, Tickets, Online, Shows, Eventos, Comprar, Noticias, Música, Conferencias, Deportes">
     <link href="estilos.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
     <header>
         <figure>
             <img src="../img/logo.png" title="Logo de un puño sosteniendo un ticket"
